Improved API semantics
